{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 80,
  "lineage": "d0aecbd3-48f4-d76e-bc42-a618bf14c942",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597993487797:route-table/rtb-0c9bf2807d7a251c8",
            "default_route_table_id": "rtb-0c9bf2807d7a251c8",
            "id": "rtb-0c9bf2807d7a251c8",
            "owner_id": "597993487797",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f773a5ec49b74ef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default route table",
              "env": "k8s"
            },
            "tags_all": {
              "Name": "default route table",
              "env": "k8s"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b6b5e280b151631"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "VM1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:597993487797:instance/i-0d654b54b7dd56e50",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d654b54b7dd56e50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08524fe5b82fd7ba7",
            "private_dns": "ip-10-11-0-110.us-west-2.compute.internal",
            "private_ip": "10.11.0.110",
            "public_ip": "54.69.229.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e014e93b14eef2ec",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046c615d0da024ccb",
            "tags": {
              "Name": "VM1"
            },
            "tags_all": {
              "Name": "VM1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04da91b7960403612"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecgroup",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "VM2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:597993487797:instance/i-0897d2384518e81fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0897d2384518e81fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01609ff3fea249e65",
            "private_dns": "ip-10-11-0-67.us-west-2.compute.internal",
            "private_ip": "10.11.0.67",
            "public_ip": "54.189.103.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0961aa022b325be39",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046c615d0da024ccb",
            "tags": {
              "Name": "VM2"
            },
            "tags_all": {
              "Name": "VM2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04da91b7960403612"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecgroup",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "VM3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:597993487797:instance/i-0339681a899986254",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0339681a899986254",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fbb33cdb20fded60",
            "private_dns": "ip-10-11-0-189.us-west-2.compute.internal",
            "private_ip": "10.11.0.189",
            "public_ip": "54.189.5.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e53ae5046fcd9db6",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046c615d0da024ccb",
            "tags": {
              "Name": "VM3"
            },
            "tags_all": {
              "Name": "VM3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04da91b7960403612"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecgroup",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597993487797:internet-gateway/igw-04f773a5ec49b74ef",
            "id": "igw-04f773a5ec49b74ef",
            "owner_id": "597993487797",
            "tags": {
              "Env": "k8s",
              "Name": "k8s_gw"
            },
            "tags_all": {
              "Env": "k8s",
              "Name": "k8s_gw"
            },
            "vpc_id": "vpc-06b6b5e280b151631"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysecgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597993487797:security-group/sg-04da91b7960403612",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04da91b7960403612",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "terraform-20220511120557032600000001",
            "name_prefix": "terraform-",
            "owner_id": "597993487797",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06b6b5e280b151631"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597993487797:subnet/subnet-046c615d0da024ccb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.11.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046c615d0da024ccb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597993487797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "k8s",
              "Name": "k8s_subnet"
            },
            "tags_all": {
              "Env": "k8s",
              "Name": "k8s_subnet"
            },
            "vpc_id": "vpc-06b6b5e280b151631"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597993487797:vpc/vpc-06b6b5e280b151631",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-07c70d75527b397bc",
            "default_route_table_id": "rtb-0c9bf2807d7a251c8",
            "default_security_group_id": "sg-0b10a220a4d4fc4d3",
            "dhcp_options_id": "dopt-02232185734e5e9aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06b6b5e280b151631",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c9bf2807d7a251c8",
            "owner_id": "597993487797",
            "tags": {
              "Env": "k8s",
              "Name": "k8s_vpc"
            },
            "tags_all": {
              "Env": "k8s",
              "Name": "k8s_vpc"
            }
          }
        }
      ]
    }
  ]
}